--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-pdf/renderer": "^4.3.0",
     "@supabase/supabase-js": "^2.45.4",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.0",
